import java.nio.charset.StandardCharsets
import java.nio.file.FileSystems

plugins {
    id 'java'
    id 'idea'
    id 'project-report'
    id 'org.springframework.boot' version '2.3.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
}

group = 'org.gty'
version = '1.1.0.RELEASE'
description = 'Spring Boot Reactive Demo'

java.sourceCompatibility = JavaVersion.VERSION_14
java.targetCompatibility = JavaVersion.VERSION_14
[compileJava, compileTestJava]*.options*.encoding = "${StandardCharsets.UTF_8}"
javadoc.options.encoding = "${StandardCharsets.UTF_8}"

repositories {
    jcenter()
}

configurations {
    implementation.exclude module: 'spring-boot-starter-logging'

    runtimeClasspath { extendsFrom developmentOnly }
    compileOnly { extendsFrom annotationProcessor }
}

bootRun {
    def activeProfile = 'spring.profiles.active'
    systemProperties[activeProfile] = project.gradle.startParameter.systemPropertiesArgs[activeProfile]
}

bootJar {
    layered {
        includeLayerTools = true

        /*
        application {
            intoLayer("spring-boot-loader") {
                include "org/springframework/boot/loader/**"
            }
            intoLayer("application")
        }
        dependencies {
            intoLayer("snapshot-dependencies") {
                include "*:*:*SNAPSHOT"
            }
            intoLayer("dependencies")
        }
        layerOrder = ["dependencies", "spring-boot-loader", "snapshot-dependencies", "application"]
         */
    }
}

bootBuildImage {
    environment = ["BP_JVM_VERSION" : "14"]
}

dependencies {
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
//  implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
//  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
//  implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
//  implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.springframework.boot:spring-boot-starter-security'
//  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//  implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
//  implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
//  implementation 'org.springframework.boot:spring-boot-starter-websocket'

//  developmentOnly 'org.springframework.boot:spring-boot-devtools'
//  runtime 'org.springframework.boot:spring-boot-properties-migrator'
//  compileOnly 'org.projectlombok:lombok'
//  annotationProcessor 'org.projectlombok:lombok'

//  implementation 'org.springframework.retry:spring-retry:1.2.5.RELEASE'
    implementation 'org.springframework.session:spring-session-data-redis:2.3.0.RELEASE'
    implementation 'org.springframework.kafka:spring-kafka:2.5.5.RELEASE'
//  implementation 'org.springframework.security:spring-security-ldap:5.1.6.RELEASE'

    implementation 'org.flywaydb:flyway-core:6.5.4'
    implementation 'org.postgresql:postgresql:42.2.14'
    implementation 'com.lmax:disruptor:3.4.2'
//  implementation 'io.jsonwebtoken:jjwt:0.9.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.11.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.11.0'
    implementation 'com.zaxxer:HikariCP:3.4.5'
    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.ibm.icu:icu4j:67.1'

    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'commons-codec:commons-codec:1.14'
    implementation 'commons-fileupload:commons-fileupload:1.4'
    implementation 'commons-io:commons-io:2.7'
    implementation 'org.apache.commons:commons-lang3:3.11'
    implementation 'org.apache.commons:commons-text:1.8'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-compress:1.20'
    implementation 'org.apache.commons:commons-pool2:2.8.0'
    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'

    implementation 'io.github.openfeign:feign-core:11.0'
    implementation 'io.github.openfeign:feign-slf4j:11.0'
    implementation 'io.github.openfeign:feign-jackson:11.0'
    implementation 'io.github.openfeign:feign-gson:11.0'
    implementation 'io.github.openfeign:feign-reactive-wrappers:11.0'
    implementation 'io.github.openfeign:feign-java11:10.11'
    implementation 'io.github.openfeign:feign-okhttp:11.0'
    implementation 'com.squareup.okhttp3:okhttp:4.8.1'

//  implementation 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
//  implementation 'org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE'
//  implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.2.RELEASE'
//  implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
//  implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0'

    implementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final'
//  implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.powermock:powermock-module-junit4:2.0.7'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.7'
    testImplementation 'io.github.openfeign:feign-mock:11.0'
//  testRuntimeOnly 'com.h2database:h2:1.4.196'
}

clean.doLast {
    project.delete "$projectDir${FileSystems.default.separator}out${FileSystems.default.separator}"
}

// for Java 12 and 13 features
//tasks.withType(JavaCompile).each {
//    it.options.compilerArgs.add('--enable-preview')
//}
//
//bootRun.jvmArgs(['--enable-preview'])

task buildApp {
    dependsOn clean
    dependsOn bootJar

    tasks.getByName('bootJar').mustRunAfter clean
}
